# roshi-rag

./: .flake8  .pre-commit-config.yaml  LICENSE  MEMORY_INTEGRATION.md  README.md  demo_llama.py  main.py  pyproject.toml  requirements.txt
agents/: chat_agent.py  joke_agent.py  supervisor_agent.py  synthesizer_agent.py
agents/graph/: agents_graph.py
config/: llm_config.py
endpoints/: chat.py
examples/: llama_example.py
models/: ai_models.py
services/: llm_service.py
test/: test_llama.py  test_llm_stream.py  test_postgres_memory.py
utils/: llama_config.py
